--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Olá, Mundo!</h1>
+    <h1>Olá, INF1FT!</h1>
     <img src="images/blz.jpg" alt="">
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus voluptas hic dolore reiciendis iusto
+        consequuntur impedit dolores cupiditate aspernatur, eligendi atque inventore dicta, molestias distinctio commodi
+        rerum corporis incidunt.</h1>
 </body>
+
 </html>
